--- a/writeup/abstract.tex
+++ b/writeup/abstract.tex
@@ -1,5 +1,11 @@
-Contrastive estimation is the most predominantly used technique for learning low dimensional knowledge graph (KG) representations for eliminating the computational burdens associated with calculating the normalization constant in softmax prediction layers. Given that KGs only consist of facts benefiting from this approach necessitates the fabrication of negative samples. Therefore, a crucial aspect of training KG embeddings is the choice of negative sampling distribution, which balances computational complexity of intractable objectives with hard negatives. While, earlier methods either employ too simple distributions, i.e. uniform, or sophisticated adversarial distributions they do not explicitly incorporate known graph structure resulting in suboptimal negatives. In this paper, we propose Structure Aware Negative Sampling (SANS), a computationally cheap negative sampling strategy that utilizes the rich graph structure by selecting negative samples from a node's \emph{k-hop} neighbourhood. We also employ a dynamic sampling scheme which results in significantly harder negatives than uniform sampling, yet is computationally cheaper than state-of-the-art approaches while producing competitive results. 
+Learning low dimensional representations for entities and relations in knowledge graphs using contrastive estimation represents a scalable and effective method for inferring connectivity patterns and predicting missing links. A crucial aspect to constrastive learning approaches is the choice of corruption distribution that generates hard negative samples which force the embedding model to learn discriminative representations and find critical characteristics of observed data. While, earlier methods either employ too simple corruption distributions, i.e. uniform, yielding easy uninformative negatives or sophisticated adversarial distributions with challenging optimization schemes they do not explicitly incorporate known graph structure resulting in suboptimal negatives. In this paper, we propose Structure Aware Negative Sampling (SANS), a inexpensive negative sampling strategy that utilizes the rich graph structure by selecting negative samples from a node's \emph{k-hop} neighbourhood. Empirically, we demonstrate that SANS finds high quality negatives which are highly competitive with SOTA methods and requires no additional parameters nor difficult adversarial optimization.
 
+\cut{
+We further employ a dynamic sampling scheme, which results in harder negatives than uniform sampling, yet is cheaper than state-of-the-art methods while producing competitive results.}
+
+\cut{
+Contrastive estimation is the most predominantly used technique for learning low dimensional knowledge graph (KG) representations for eliminating the computational burdens associated with calculating the normalization constant in softmax prediction layers. Given that KGs only consist of facts benefiting from this approach necessitates the fabrication of negative samples. Therefore, a crucial aspect of training KG embeddings is the choice of negative sampling distribution, which balances computational complexity of intractable objectives with hard negatives. While, earlier methods either employ too simple distributions, i.e. uniform, or sophisticated adversarial distributions they do not explicitly incorporate known graph structure resulting in suboptimal negatives. In this paper, we propose Structure Aware Negative Sampling (SANS), a computationally cheap negative sampling strategy that utilizes the rich graph structure by selecting negative samples from a node's \emph{k-hop} neighbourhood. We also employ a dynamic sampling scheme which results in significantly harder negatives than uniform sampling, yet is computationally cheaper than state-of-the-art approaches while producing competitive results. 
+}
 
 
 % Version 3 ----------------------------------------------------------------------------------
