--- a/emnlp2020.bib
+++ b/emnlp2020.bib
@@ -24,11 +24,29 @@
   journal={arXiv preprint arXiv:1902.10197},
   year={2019}
 }
+@article{williams1992simple,
+  title={Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+  author={Williams, Ronald J},
+  journal={Machine learning},
+  volume={8},
+  number={3-4},
+  pages={229--256},
+  year={1992},
+  publisher={Springer}
+}
 @article{bose2018adversarial,
   title={Adversarial contrastive estimation},
   author={Bose, Avishek Joey and Ling, Huan and Cao, Yanshuai},
   journal={arXiv preprint arXiv:1805.03642},
   year={2018}
+}
+@inproceedings{smith2005contrastive,
+  title={Contrastive estimation: Training log-linear models on unlabeled data},
+  author={Smith, Noah A and Eisner, Jason},
+  booktitle={Proceedings of the 43rd Annual Meeting on Association for Computational Linguistics},
+  pages={354--362},
+  year={2005},
+  organization={Association for Computational Linguistics}
 }
 @inproceedings{bordes2013translating,
   title={Translating embeddings for modeling multi-relational data},
